copy and initial styling

--- a/experiments.html
+++ b/experiments.html
@@ -10,8 +10,8 @@ keywords:
     <h1>Experiments</h1>
     <ul class="no-bullet work">
       <li>
+        <span class="label future">Future</span>
         <h3>
-          <span class="label secondary">Future</span>
           Timeline of government platforms
          </h3>
         <p>
@@ -19,8 +19,8 @@ keywords:
         </p>
       </li>
       <li>
+        <span class="label future">Future</span>
         <h3>
-          <span class="label secondary">Future</span>
           Timeline of government data breaches
          </h3>
         <p>
