--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@ keywords: github pages, Jekyll, foundation 6
 
 <section role="main" class="grid-x">
   <div class="small-12 cell">
-    <h1 class="mvl text-center">
-      {{ page.title }}
-     </h1>
-    <p class="mvl lead text-center">
-      Open resources for anyone who want to understand how digital platforms how digital platforms will change government and society
-    </p>
-
+    <div class="intro">
+      <h1 class="text-center">
+        {{ page.title }}
+       </h1>
+      <h2 class="text-center">
+        Open resources for anyone who wants to understand how digital platforms how digital platforms will change government and society
+      </h2>
+    </div>
     <div class="grid-x"> 
       <div class="large-6 cell">
-        <h2>Project aims</h2>
+        <h3>Project aims</h3>
         <ol>
           <li>
               Give <a href="https://medium.com/digitalhks/the-end-of-the-beginning-of-digital-service-units-cf1fcce8aa57">digital service units</a> resources to help them build good platforms
           </li>
           <li>
-              Test ways of explaining the value and implications of digital platforms to politicians and policy makers
+              Test ways of explaining the value and implications of digital platforms to politicians and policymakers
           </li>
           <li>
               Identify the important parts of platform government and develop a common language for talking about it
@@ -34,7 +35,7 @@ keywords: github pages, Jekyll, foundation 6
       </div>
 
       <div class="large-6 cell">
-        <h2>Latest</h2>
+        <h3>Latest</h3>
         <ul>
           <li>
             <a href="https://medium.com/platform-land/platforms-irl-1605a29674f9">Blog post: Real-world government platforms</a>
