--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@ keywords:
       <li>
         <span class="label in-progress">In progress</span>
         <h3>
-          <a href="https://platformland.github.io/playbook/">Government platforms playbook</a>
+          <a href="https://platformland.github.io/playbook/book/text/index.html">Government platforms playbook</a>
          </h3>
         <p>
           A practitioners manual for teams designing and operating government platforms
