--- a/data.html
+++ b/data.html
@@ -4,66 +4,67 @@ title: Data
 description: 
 keywords: 
 ---
+<div class="grid-container">
+  <section role="main" class="grid-x">
+    <div class="medium-10 large-8 cell">
+      <h1>Data</h1>
+      <ul class="no-bullet work">
+        <li>
+          <span class="label in-progress">In progress</span>
+          <h3>
+            <a href="https://platformland.github.io/government-design-systems/">Register of government design systems</a>
+           </h3>
+          <p>
+            A list of design systems in use by digital service units around the world.
+          </p>
+        </li>
+        <li>
+          <span class="label in-progress">In progress</span>
+          <h3>
+            <a href="https://platformland.github.io/government-common-platforms">Register of government platforms</a>
+           </h2>
+          <p>
+            A list of platforms in use by digital service units around the world.
+          </p>
+        </li>
+        <li>
+          <span class="label future">future</span>
+          <h3>
+            Government as a Platform RSS feeds
+           </h3>
+          <p>
+            An OMPL file of blogs that are publishing on the subject of government as a platform.
+          </p>
+        </li>
+        <li>
+          <span class="label future">Future</span>
+          <h3>
+            Reading list: intro to government as a platform
+           </h3>
+          <p>
+            An RIS file of pubications on the subject of government as a platform	for importing into citation software like Zotero or Mendelay
+          </p>
+        </li>
+        <li>
+          <span class="label future">Future</span>
+          <h3>
+            Reading list: intro to digital platforms
+           </h3>
+          <p>
+            An RIS file of pubications on the subject of digital platforms for importing into citation software like Zotero or Mendelay
+          </p>
+        </li>
+        <li>
+          <span class="label future">Future</span>
+          <h3>
+            Register of government github accounts
+           </h3>
+          <p>
+            A list of government github accounts as structured data
+          </p>
+        </li>
+      </ul>
 
-<section role="main" class="grid-x">
-  <div class="medium-10 large-8 cell">
-    <h1>Data</h1>
-    <ul class="no-bullet work">
-      <li>
-        <span class="label in-progress">In progress</span>
-        <h3>
-          <a href="https://platformland.github.io/government-design-systems/">Register of government design systems</a>
-         </h3>
-        <p>
-          A list of design systems in use by digital service units around the world.
-        </p>
-      </li>
-      <li>
-        <span class="label in-progress">In progress</span>
-        <h3>
-          <a href="https://platformland.github.io/government-common-platforms">Register of government platforms</a>
-         </h2>
-        <p>
-          A list of platforms in use by digital service units around the world.
-        </p>
-      </li>
-      <li>
-        <span class="label future">future</span>
-        <h3>
-          Government as a Platform RSS feeds
-         </h3>
-        <p>
-          An OMPL file of blogs that are publishing on the subject of government as a platform.
-        </p>
-      </li>
-      <li>
-        <span class="label future">Future</span>
-        <h3>
-          Reading list: intro to government as a platform
-         </h3>
-        <p>
-          An RIS file of pubications on the subject of government as a platform	for importing into citation software like Zotero or Mendelay
-        </p>
-      </li>
-      <li>
-        <span class="label future">Future</span>
-        <h3>
-          Reading list: intro to digital platforms
-         </h3>
-        <p>
-          An RIS file of pubications on the subject of digital platforms for importing into citation software like Zotero or Mendelay
-        </p>
-      </li>
-      <li>
-        <span class="label future">Future</span>
-        <h3>
-          Register of government github accounts
-         </h3>
-        <p>
-          A list of government github accounts as structured data
-        </p>
-      </li>
-    </ul>
-
-  </div>
-</section>
+    </div>
+  </section>
+</div>
