--- a/newsletter.html
+++ b/newsletter.html
@@ -5,19 +5,21 @@ description:
 keywords: 
 ---
 
-<section role="main" class="grid-x">
-  <div class="medium-10 large-8 cell">
-    <h1>Newsletter</h1>
-    <p>The best way to follow this project is to subscribe to the research notes mailing list.</p>
-    <form id="mailinglist" action="https://memespring.us19.list-manage.com/subscribe/post?u=086f7ae0f10780901d36c8808&amp;id=2991c85af0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <label for="mce-EMAIL">Email address</label>
-      <div class="input-group">
-        <input type="email" value="" name="EMAIL" class="input-group-field" id="mce-EMAIL">
-        <input type="hidden" name="b_086f7ae0f10780901d36c8808_2991c85af0" tabindex="-1" value="">
-        <div class="input-group-button">
-          <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+<div class="grid-container">
+  <section role="main" class="grid-x">
+    <div class="medium-10 large-8 cell">
+      <h1>Newsletter</h1>
+      <p>The best way to follow this project is to subscribe to the research notes mailing list.</p>
+      <form id="mailinglist" action="https://memespring.us19.list-manage.com/subscribe/post?u=086f7ae0f10780901d36c8808&amp;id=2991c85af0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <label for="mce-EMAIL">Email address</label>
+        <div class="input-group">
+          <input type="email" value="" name="EMAIL" class="input-group-field" id="mce-EMAIL">
+          <input type="hidden" name="b_086f7ae0f10780901d36c8808_2991c85af0" tabindex="-1" value="">
+          <div class="input-group-button">
+            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+          </div>
         </div>
-      </div>
-    </form>
-  </div>
-</section>
+      </form>
+    </div>
+  </section>
+</div>
