--- a/experiments.html
+++ b/experiments.html
@@ -5,29 +5,31 @@ description:
 keywords: 
 ---
 
-<section role="main" class="grid-x">
-  <div class="medium-10 large-8 cell">
-    <h1>Experiments</h1>
-    <ul class="no-bullet work">
-      <li>
-        <span class="label future">Future</span>
-        <h3>
-          Timeline of government platforms
-         </h3>
-        <p>
-          A graphical timeline of platform launches and significant events from around the world
-        </p>
-      </li>
-      <li>
-        <span class="label future">Future</span>
-        <h3>
-          Timeline of government data breaches
-         </h3>
-        <p>
-          A graphical timeline of significant government data breaches from around the world
-        </p>
-      </li>
-    </ul>
+<div class="grid-container">
+  <section role="main" class="grid-x">
+    <div class="medium-10 large-8 cell">
+      <h1>Experiments</h1>
+      <ul class="no-bullet work">
+        <li>
+          <span class="label future">Future</span>
+          <h3>
+            Timeline of government platforms
+           </h3>
+          <p>
+            A graphical timeline of platform launches and significant events from around the world
+          </p>
+        </li>
+        <li>
+          <span class="label future">Future</span>
+          <h3>
+            Timeline of government data breaches
+           </h3>
+          <p>
+            A graphical timeline of significant government data breaches from around the world
+          </p>
+        </li>
+      </ul>
 
-  </div>
-</section>
+    </div>
+  </section>
+</div>
