--- a/index.html
+++ b/index.html
@@ -1,52 +1,58 @@
 ---
 layout: default
-title: Welcome to Platform Land
+title: Platform Land
 description: This is my project. Welcome.
 keywords: github pages, Jekyll, foundation 6
 ---
 
-<section role="main" class="grid-x">
-  <div class="small-12 cell">
-    <div class="intro">
-      <h1 class="text-center">
+<div id="intro" class="grid-container fluid">
+  <section class="grid-x">
+    <div class="small-12 cell">
+      <img src="/images/stack.svg" alt="Stack diagram of government as a platform"/>
+      <h1>
         {{ page.title }}
        </h1>
-      <h2 class="text-center">
+      <h2>
         Open resources for anyone who wants to understand how digital platforms how digital platforms will change government and society
       </h2>
     </div>
-    <div class="grid-x"> 
-      <div class="large-6 cell">
-        <h3>Project aims</h3>
-        <ol>
-          <li>
-              Give <a href="https://medium.com/digitalhks/the-end-of-the-beginning-of-digital-service-units-cf1fcce8aa57">digital service units</a> resources to help them build good platforms
-          </li>
-          <li>
-              Test ways of explaining the value and implications of digital platforms to politicians and policymakers
-          </li>
-          <li>
-              Identify the important parts of platform government and develop a common language for talking about it
-          </li>
-          <li>
-              Start a conversation about the institutional, societal and democratic implications of digital platforms in government and beyond
-          </li>
-        </ol>
-      </div>
+  </section>
+</div>
+<div class="grid-container">
+  <section role="main" class="grid-x">
+     <div class="grid-x"> 
+        <div class="large-6 cell">
+          <h3>Project aims</h3>
+          <ol>
+            <li>
+                Give <a href="https://medium.com/digitalhks/the-end-of-the-beginning-of-digital-service-units-cf1fcce8aa57">digital service units</a> resources to help them build good platforms
+            </li>
+            <li>
+                Test ways of explaining the value and implications of digital platforms to politicians and policymakers
+            </li>
+            <li>
+                Identify the important parts of platform government and develop a common language for talking about it
+            </li>
+            <li>
+                Start a conversation about the institutional, societal and democratic implications of digital platforms in government and beyond
+            </li>
+          </ol>
+        </div>
 
-      <div class="large-6 cell">
-        <h3>Latest</h3>
-        <ul>
-          <li>
-            <a href="https://medium.com/platform-land/platforms-irl-1605a29674f9">Blog post: Real-world government platforms</a>
-          </li>
-          <li>
-            <a href="https://medium.com/platform-land/interview-with-will-myddelton-government-as-a-platform-3aff4ebcb3e8">
-              Interview: Will Myddelton – UK Government as a Platform programme
-            </a>
-          </li>
-       </ul>
+        <div class="large-6 cell">
+          <h3>Latest</h3>
+          <ul>
+            <li>
+              <a href="https://medium.com/platform-land/platforms-irl-1605a29674f9">Blog post: Real-world government platforms</a>
+            </li>
+            <li>
+              <a href="https://medium.com/platform-land/interview-with-will-myddelton-government-as-a-platform-3aff4ebcb3e8">
+                Interview: Will Myddelton – UK Government as a Platform programme
+              </a>
+            </li>
+         </ul>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
