--- a/data/index.html
+++ b/data/index.html
@@ -28,6 +28,16 @@ keywords:
           </p>
         </li>
         <li>
+          <span class="label in-progress">In progress</span>
+          <h3>
+            <a href="https://platformland.github.io/government-service-standards">Register of government service standards</a>
+           </h2>
+          <p>
+            A list of platforms in use by digital service units around the world.
+          </p>
+        </li>
+ 
+        <li>
           <span class="label future">future</span>
           <h3>
             Government as a Platform RSS feeds
