--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ keywords: github pages, Jekyll, foundation 6
         {{ page.title }}
        </h1>
       <h2>
-        Open resources for anyone who wants to understand how digital platforms how digital platforms will change government and society
+        Open resources for anyone who wants to understand how digital platforms will change government and society
       </h2>
     </div>
   </section>
@@ -49,6 +49,9 @@ keywords: github pages, Jekyll, foundation 6
               <a href="https://medium.com/platform-land/interview-with-will-myddelton-government-as-a-platform-3aff4ebcb3e8">
                 Interview: Will Myddelton – UK Government as a Platform programme
               </a>
+            </li>
+            <li>
+              <a href="https://platformland.github.io/government-common-platforms/">List of government platforms</a>
             </li>
          </ul>
         </div>
