--- a/experiments/index.html
+++ b/experiments/index.html
@@ -11,6 +11,16 @@ keywords:
       <h1>Experiments</h1>
       <ul class="no-bullet work">
         <li>
+          <span class="label live">Live</span>
+          <h3>
+            <a href="/experiments/standard-search">Search global service standards</a>
+           </h3>        
+          <p>
+            A custom Google Search Engine that searches the different service standards listed in the register of service standards
+          </p>
+        </li>
+ 
+        <li>
           <span class="label future">Future</span>
           <h3>
             Timeline of government platforms
