--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ keywords: github pages, Jekyll, foundation 6
           <h3>Latest</h3>
           <ul>
             <li>
+              <a href="/government-service-standards/">Data: register of government service standards</a>
+            </li>
+            <li>
               <a href="https://medium.com/platform-land/platforms-irl-1605a29674f9">Blog post: Real-world government platforms</a>
             </li>
             <li>
