--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ keywords: github pages, Jekyll, foundation 6
               </a>
             </li>
             <li>
-              <a href="https://platformland.github.io/government-common-platforms/">List of government platforms</a>
+              <a href="https://platformland.github.io/government-common-platforms/">Data: register of  government platforms</a>
             </li>
          </ul>
         </div>
