link to notebook

--- a/experiments/index.html
+++ b/experiments/index.html
@@ -19,6 +19,15 @@ keywords:
             A custom Google Search Engine that searches the different service standards listed in the register of service standards
           </p>
         </li>
+         <li>
+          <span class="label in-progress">In progress</span>
+          <h3>
+            <a href="https://github.com/platformland/notebooks/blob/master/government-github-search.ipynb">Exploring GitHub government in Python</a>
+           </h3>       
+          <p>
+            Searching public government GitHub accounts for platform projects
+          </p>
+        </li>
  
         <li>
           <span class="label future">Future</span>
