--- a/data/index.html
+++ b/data/index.html
@@ -21,10 +21,10 @@ keywords:
         <li>
           <span class="label in-progress">In progress</span>
           <h3>
-            <a href="https://platformland.github.io/government-common-platforms">Register of government platforms</a>
+            <a href="https://platformland.github.io/government-common-platforms">Register of government common platforms</a>
            </h2>
           <p>
-            A list of platforms in use by digital service units around the world.
+            A list of common platforms in use by digital service units around the world.
           </p>
         </li>
         <li>
@@ -33,7 +33,7 @@ keywords:
             <a href="https://platformland.github.io/government-service-standards">Register of government service standards</a>
            </h2>
           <p>
-            A list of platforms in use by digital service units around the world.
+            A list of design principle in use by digital service units around the world.
           </p>
         </li>
  
