--- a/reading-lists.html
+++ b/reading-lists.html
@@ -9,7 +9,15 @@ keywords:
   <section role="main" class="grid-x">
     <div class="medium-10 large-8 cell">
       <h1>Reading lists</h1>
-      {% bibliography %}
+      <h3>Introduction to government as a platform</h3>
+      <p>
+      <a href="/bibliography/intro-gaap.bib" class="label secondary">Download as BibTeX</a></p>
+      {% bibliography --file intro-gaap %}
+      <h3>Digital identity</h3>
+      <p>
+      <a href="/bibliography/identity.bib" class="label secondary">Download as BibTeX</a></p>
+      {% bibliography --file identity %}
+
     </div>      
   </section>
 </div>
