--- a/resources/index.html
+++ b/resources/index.html
@@ -7,8 +7,27 @@ keywords:
 <div class="grid-container">
   <section role="main" class="grid-x">
     <div class="medium-10 large-8 cell">
-      <h1>Data</h1>
+      <h1>Resources</h1>
       <ul class="no-bullet work">
+        <li>
+          <span class="label live">Live</span>
+          <h3>
+            <a href="reading-lists">Reading lists</a>
+           </h3>
+          <p>
+            Reading lists for students looking to understand  government as a platform and associated subjects. Also available as a Bibex file importing into citation software like Zotero or Mendelay.
+          </p>
+        </li>
+        <li>
+          <span class="label live">Live</span>
+          <h3>
+            <a href="/experiments/standard-search">Search global service standards</a>
+           </h3>        
+          <p>
+            A custom Google Search Engine that searches the different service standards listed in the register of service standards
+          </p>
+        </li>
+ 
         <li>
           <span class="label in-progress">In progress</span>
           <h3>
@@ -33,10 +52,33 @@ keywords:
             <a href="https://platformland.github.io/government-service-standards">Register of government service standards</a>
            </h2>
           <p>
-            A list of design principle in use by digital service units around the world.
+            A list of design principles in use by digital service units around the world.
           </p>
         </li>
- 
+        <li>
+          <span class="label future">Future</span>
+          <h3>
+            <a>Case study: UK</a>
+          </h3>
+        </li>
+        <li>
+          <span class="label future">future</span>
+          <h3>
+            Case study: Estonia
+          </h3>
+        </li>
+       <li>
+          <span class="label future">future</span>
+          <h3>
+            Case study: India
+          </h3>
+        </li>       
+        <li>
+          <span class="label future">future</span>
+          <h3>
+            Case study: USA
+          </h3>
+        </li>
         <li>
           <span class="label future">future</span>
           <h3>
@@ -46,25 +88,7 @@ keywords:
             An OMPL file of blogs that are publishing on the subject of government as a platform.
           </p>
         </li>
-        <li>
-          <span class="label future">Future</span>
-          <h3>
-            Reading list: intro to government as a platform
-           </h3>
-          <p>
-            An RIS file of pubications on the subject of government as a platform	for importing into citation software like Zotero or Mendelay
-          </p>
-        </li>
-        <li>
-          <span class="label future">Future</span>
-          <h3>
-            Reading list: intro to digital platforms
-           </h3>
-          <p>
-            An RIS file of pubications on the subject of digital platforms for importing into citation software like Zotero or Mendelay
-          </p>
-        </li>
-        <li>
+       <li>
           <span class="label future">Future</span>
           <h3>
             Register of government github accounts
