--- a/resources/reading-lists.html
+++ b/resources/reading-lists.html
@@ -17,6 +17,16 @@ keywords:
       <p>
       <a href="/bibliography/identity.bib" class="label secondary">Download as BibTeX</a></p>
       {% bibliography --file identity %}
+      <h3>Historical parallels for platform thinking</h3>
+      <p>
+      <a href="/bibliography/history.bib" class="label secondary">Download as BibTeX</a></p>
+      {% bibliography --file history %}
+
+      <h3>Understanding digital platforms</h3>
+      <p>
+      <a href="/bibliography/platforms.bib" class="label secondary">Download as BibTeX</a></p>
+      {% bibliography --file platforms %}
+
 
     </div>      
   </section>
