--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@ keywords: github pages, Jekyll, foundation 6
 <div class="grid-container">
   <section role="main" class="grid-x">
      <div class="grid-x"> 
+       <div class="large-6 cell">
+          <h3>Featured blog posts</h3>
+          <ul class="no-bullet">
+            <li>
+              <a href="https://medium.com/platform-land/definitions-government-as-a-platform-a-proposal-88854ef15ef2">Definitions: government-as-a-platform (a proposal)</a>
+            </li>
+            <li>
+              <a href="https://medium.com/platform-land/digital-service-standards-and-platforms-c11e060cacd" target="_blank">Digital service standards and platforms</a>
+            </li>
+           <li>
+              <a href="https://medium.com/platform-land/platforms-irl-1605a29674f9">Real-world government platforms</a>
+            </li>
+            <li>
+              <a href="https://medium.com/platform-land/interview-with-will-myddelton-government-as-a-platform-3aff4ebcb3e8">
+                Interview with Will Myddelton – UK Government as a Platform programme
+              </a>
+            </li>
+         </ul>
+      <h3>Recent newsletters</h3>
+      <script language="javascript" src="//us19.list-manage.com/generate-js/?u=086f7ae0f10780901d36c8808&fid=2655&show=10" type="text/javascript"></script>
+ 
+      </div>
         <div class="large-6 cell">
           <h3>Project aims</h3>
           <ol>
@@ -39,26 +61,7 @@ keywords: github pages, Jekyll, foundation 6
           </ol>
         </div>
 
-        <div class="large-6 cell">
-          <h3>Latest</h3>
-          <ul>
-            <li>
-              <a href="https://medium.com/platform-land/definitions-government-as-a-platform-a-proposal-88854ef15ef2">Definitions: government-as-a-platform (a proposal)</a>
-            </li>
-           <li>
-              <a href="https://medium.com/platform-land/platforms-irl-1605a29674f9">Blog post: Real-world government platforms</a>
-            </li>
-            <li>
-              <a href="https://medium.com/platform-land/interview-with-will-myddelton-government-as-a-platform-3aff4ebcb3e8">
-                Interview: Will Myddelton – UK Government as a Platform programme
-              </a>
-            </li>
-            <li>
-              <a href="https://platformland.github.io/government-common-platforms/">Data: register of  government platforms</a>
-            </li>
-         </ul>
-        </div>
-      </div>
+ 
     </div>
   </section>
 </div>
