--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Platform Land
-description: This is my project. Welcome.
+description: Open resources for anyone who wants to understand how digital platforms will change government and society
 keywords: github pages, Jekyll, foundation 6
 ---
 
