--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@ keywords: github pages, Jekyll, foundation 6
               <a href="https://medium.com/platform-land/definitions-government-as-a-platform-a-proposal-88854ef15ef2">Definitions: government-as-a-platform (a proposal)</a>
             </li>
             <li>
+              <a href="https://medium.com/platform-land/definitions-quotes-and-themes-on-government-as-a-platform-b73d287ca9a1" target="_blank">Definitions: quotes and themes on Government-as-a-Platform</a>
+            </li>
+            <li>
               <a href="https://medium.com/platform-land/digital-service-standards-and-platforms-c11e060cacd" target="_blank">Digital service standards and platforms</a>
+            </li>
+            <li>
+              <a href="https://medium.com/platform-land/platforms-for-government-platforms-for-society-87b3ef0b67d8" target="_blank">Platforms for government? Platforms for society?</a>       
             </li>
            <li>
               <a href="https://medium.com/platform-land/platforms-irl-1605a29674f9">Real-world government platforms</a>
