--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Platform Land
+title: Platform Government Initiative
 description: Open resources for anyone who wants to understand how digital platforms will change government and society
 keywords: github pages, Jekyll, foundation 6
 ---
