--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Platform Government Initiative
+title: The Platform Government Initiative
 description: Open resources for anyone who wants to understand how digital platforms will change government and society
-keywords: github pages, Jekyll, foundation 6
+keywords: government
 ---
 
 <div id="intro" class="grid-container fluid">
@@ -13,7 +13,7 @@ keywords: github pages, Jekyll, foundation 6
         {{ page.title }}
        </h1>
       <h2>
-        Open resources for anyone who wants to understand how digital platforms will change government and society
+        A research project at digitalHKS examining how digital platforms will change government and society
       </h2>
     </div>
   </section>
@@ -21,36 +21,15 @@ keywords: github pages, Jekyll, foundation 6
 <div class="grid-container">
   <section role="main" class="grid-x">
      <div class="grid-x"> 
-       <div class="large-6 cell">
-          <h3>Featured blog posts</h3>
-          <ul class="no-bullet">
-            <li>
-              <a href="https://medium.com/platform-land/definitions-government-as-a-platform-a-proposal-88854ef15ef2">Definitions: government-as-a-platform (a proposal)</a>
-            </li>
-            <li>
-              <a href="https://medium.com/platform-land/definitions-quotes-and-themes-on-government-as-a-platform-b73d287ca9a1" target="_blank">Definitions: quotes and themes on Government-as-a-Platform</a>
-            </li>
-            <li>
-              <a href="https://medium.com/platform-land/digital-service-standards-and-platforms-c11e060cacd" target="_blank">Digital service standards and platforms</a>
-            </li>
-            <li>
-              <a href="https://medium.com/platform-land/platforms-for-government-platforms-for-society-87b3ef0b67d8" target="_blank">Platforms for government? Platforms for society?</a>       
-            </li>
-           <li>
-              <a href="https://medium.com/platform-land/platforms-irl-1605a29674f9">Real-world government platforms</a>
-            </li>
-            <li>
-              <a href="https://medium.com/platform-land/interview-with-will-myddelton-government-as-a-platform-3aff4ebcb3e8">
-                Interview with Will Myddelton – UK Government as a Platform programme
-              </a>
-            </li>
-         </ul>
-      <h3>Recent newsletters</h3>
-      <script language="javascript" src="//us19.list-manage.com/generate-js/?u=086f7ae0f10780901d36c8808&fid=2655&show=10" type="text/javascript"></script>
- 
+       <div class="large-8 cell">
+         <p class="lead">
+       Government as a Platform - the reorganizing of the work of government around digital platforms - is already the changing the way governments around the world operate. It brings with it the opportunity for radically better public services, but also and new questions about governance, accountability and international cooperation. 
+        </p>
+       </div>
       </div>
-        <div class="large-6 cell">
-          <h3>Project aims</h3>
+      <div class="grid-x">
+        <div class="large-8 cell">
+          <h3>Aims of the initiative</h3>
           <ol>
             <li>
                 Give <a href="https://medium.com/digitalhks/the-end-of-the-beginning-of-digital-service-units-cf1fcce8aa57">digital service units</a> resources to help them build good platforms
@@ -66,8 +45,31 @@ keywords: github pages, Jekyll, foundation 6
             </li>
           </ol>
         </div>
-
- 
-    </div>
+      </div>
+      <div class="grid-x">
+        <div class="large-8 cell">
+          <h3>Activities and outputs</h3>
+          <ol>
+            <li>
+              Interviewing technologists, policy makers and politicians from governments and the private sector
+            </li>
+            <li>
+              Mapping the emergence of platforms around the world and publishing it as open data
+            </li>
+            <li>
+              Writing a platforms playbook for government digital service units
+            </li>
+            <li>
+              Publishing articles on the key issues related to government platforms
+            </li>
+            <li>
+              Developing resources for students and practitioners looking to understand platform government
+            </li>
+            <li>
+              Publishing a bi-weekly newsletter on government platforms to keep practitioners, researchers and policy makers informed 
+            </li>
+          </ul>
+        </div>
+      </div>
   </section>
 </div>
