--- a/newsletter.html
+++ b/newsletter.html
@@ -8,8 +8,10 @@ keywords:
 <div class="grid-container">
   <section role="main" class="grid-x">
     <div class="medium-10 large-8 cell">
-      <h1>Newsletter</h1>
-      <p>The best way to follow this project is to subscribe to the research notes mailing list.</p>
+      <h1>The Platform Land Newsletter</h1>
+      <p>
+    Digital platforms are already changing governments around the world.  The Platform Land newsletter provides a bi-weekly summary of what is happening in key countries, platform mapping updates and reviews of relevant research papers 
+      </p>
       <form id="mailinglist" action="https://memespring.us19.list-manage.com/subscribe/post?u=086f7ae0f10780901d36c8808&amp;id=2991c85af0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <label for="mce-EMAIL">Email address</label>
         <div class="input-group">
