--- a/publications.html
+++ b/publications.html
@@ -9,6 +9,7 @@ keywords:
   <section role="main" class="grid-x">
     <div class="medium-10 large-8 cell">
       <h1>Publications</h1>
+      <h2>e-books</h2>
       <ul class="no-bullet work">
         <li>
           <span class="label in-progress">In progress</span>
@@ -19,7 +20,44 @@ keywords:
             A practitioners manual for teams designing and operating government platforms
           </p>
         </li>
+      </ul>
+      <h2>Articles</h2>
+      <ul class="work no-bullet">
+        <li>
+          <span class="label in-progress">In progress</span>
+          <h3>
+            <a href="https://medium.com/platform-land/government-as-a-platform-the-hard-problems-part-1-introduction-b57269bcdc6f">Government as a Platform, the hard problems</a>
+           </h3>
+          <p>
+            A review of some of the emerging political, ethical, governance and technical challenges of Government as a Platform
+          </p>
+        </li>
+        <li>
+          <span class="label live">Complete</span>
+          <h3>
+            <a href="https://medium.com/digitalhks/data-sharing-in-government-why-democracies-must-change-direction-badfaa2463ec">Data-sharing in government: why it’s time for a new social contract</a>
+           </h3>
+        </li>
+        <li>
+          <span class="label live">Complete</span>
+          <h3>
+            <a href="https://medium.com/platform-land/a-history-of-street-lighting-in-suburban-london-a-parable-for-digital-government-516ca61fba33">Street lighting in suburban London: a parable for digital government</a>
+           </h3>
+          <p>
+            How the growth of municipal utilities from the early 20th Century provides lessons for the development digital government.
+          </p>
+        </li>
      </ul>
+     <h2>Interviews</h2>
+     <ul class="work no-bullet">
+        <li>
+          <h3>
+            <a href="https://medium.com/platform-land/interview-with-will-myddelton-government-as-a-platform-3aff4ebcb3e8">Interview with Will Myddelton – UK Government as a Platform programme</a>
+           </h3>
+        </li> 
+
+     </ul>
+
 
     </div>
   </section>
