--- a/index.html
+++ b/index.html
@@ -5,31 +5,14 @@ description: Open resources for anyone who wants to understand how digital platf
 keywords: government
 ---
 
-<div id="intro" class="grid-container fluid">
-  <section class="grid-x">
-    <div class="small-12 cell">
-      <img src="/images/stack.svg" alt="Stack diagram of government as a platform"/>
-      <h1>
-        {{ page.title }}
-       </h1>
-      <h2>
-        A research project at digitalHKS examining how digital platforms will change government and society
-      </h2>
-    </div>
-  </section>
-</div>
-<div class="grid-container">
-  <section role="main" class="grid-x">
+<div class="grid-container ">
+  <section role="main" class="grid-x grid-margin-x">
      <div class="grid-x"> 
        <div class="large-8 cell">
-         <p class="lead">
-       Government as a Platform - the reorganizing of the work of government around digital platforms - is already the changing the way governments around the world operate. It brings with it the opportunity for radically better public services, but also and new questions about governance, accountability and international cooperation. 
-        </p>
-       </div>
-      </div>
-      <div class="grid-x">
-        <div class="large-8 cell">
-          <h3>Aims of the initiative</h3>
+        <p class="lead">
+          The Government Platform Initiative is a research project at digitalHKS examining how digital platforms will change government and society.
+         </p>
+         <h3>Aims of the initiative</h3>
           <ol>
             <li>
                 Give <a href="https://medium.com/digitalhks/the-end-of-the-beginning-of-digital-service-units-cf1fcce8aa57">digital service units</a> resources to help them build good platforms
@@ -44,10 +27,6 @@ keywords: government
                 Start a conversation about the institutional, societal and democratic implications of digital platforms in government and beyond
             </li>
           </ol>
-        </div>
-      </div>
-      <div class="grid-x">
-        <div class="large-8 cell">
           <h3>Activities and outputs</h3>
           <ol>
             <li>
@@ -69,6 +48,18 @@ keywords: government
               Publishing a bi-weekly newsletter on government platforms to keep practitioners, researchers and policy makers informed 
             </li>
           </ul>
+
+       </div>
+       <div class="large-4 cell">
+         <img src="/images/stack.png" alt="" style="float:right"/>
+       </div>
+      </div>
+      <div class="grid-x">
+        <div class="large-8 cell">
+        </div>
+      </div>
+      <div class="grid-x">
+        <div class="large-8 cell">
         </div>
       </div>
   </section>
