--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ keywords: government
 ---
 
 <div class="grid-container ">
-  <section role="main" class="grid-x grid-margin-x">
-     <div class="grid-x"> 
+  <section role="main" class="grid-x grid-padding-x">
+     <div class="grid-x">
        <div class="large-8 cell">
         <p class="lead">
           The Government Platform Initiative is a research project at digitalHKS examining how digital platforms will change government and society.
@@ -50,17 +50,12 @@ keywords: government
           </ul>
 
        </div>
-       <div class="large-4 cell">
-         <img src="/images/stack.png" alt="" style="float:right"/>
+      <div class="large-4 cell">
+         <img src="/images/stack.png" alt="" style="padding:20px"/>
        </div>
+
+
       </div>
-      <div class="grid-x">
-        <div class="large-8 cell">
-        </div>
-      </div>
-      <div class="grid-x">
-        <div class="large-8 cell">
-        </div>
-      </div>
+
   </section>
 </div>
