--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ keywords: government
               Developing resources for students and practitioners looking to understand platform government
             </li>
             <li>
-              Publishing a bi-weekly newsletter on government platforms to keep practitioners, researchers and policy makers informed 
+              Publishing a biweekly newsletter on government platforms to keep practitioners, researchers and policy makers informed 
             </li>
           </ul>
 
