--- a/mapping/index.html
+++ b/mapping/index.html
@@ -9,7 +9,7 @@ keywords:
     <div class="medium-10 large-8 cell">
       <h1>Mapping</h1>
       <p>
-        The Government Platform Initiative is aiming to map government platforms, standards and design systems around the world. By making the data available under an open licence, we hope it will become a useful resource both for digital service units looking to understand approaches in other countries,  and researchers studying the emergence of platform government.
+        The Platform Government Initiative is aiming to map government platforms, digital standards and design systems around the world. By making the data available under an open licence, we hope it will become a useful resource both for digital service units looking to understand approaches in other countries, and researchers studying the emergence of platform government.
       </p>
       <ul class="no-bullet work">
         <li>
