--- a/mapping/index.html
+++ b/mapping/index.html
@@ -18,7 +18,7 @@ keywords:
             <a href="https://platformland.github.io/government-common-platforms">Register of government common platforms</a>
            </h2>
           <p>
-            A list of common platforms in use by digital service units around the world.
+            A list of common platforms in use by digital service units around the world
           </p>
         </li>
 
@@ -28,7 +28,7 @@ keywords:
             <a href="https://platformland.github.io/government-design-systems/">Register of government design systems</a>
            </h3>
           <p>
-            A list of design systems in use by digital service units around the world.
+            A list of design systems in use by digital service units around the world
           </p>
         </li>
         <li>
@@ -37,7 +37,7 @@ keywords:
             <a href="https://platformland.github.io/government-service-standards">Register of government service standards</a>
            </h2>
           <p>
-            A list of design principles in use by digital service units around the world.
+            A list of design principles in use by digital service units around the world
           </p>
         </li>
        </ul>
