--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@ keywords:
             <a href="https://medium.com/platform-land/a-history-of-street-lighting-in-suburban-london-a-parable-for-digital-government-516ca61fba33">Street lighting in suburban London: a parable for digital government</a>
            </h3>
           <p>
-            How the growth of municipal utilities from the early 20th Century provides lessons for the development digital government.
+            How the growth of municipal utilities from the early 20th Century provides lessons for the development digital government
           </p>
         </li>
      </ul>
