--- a/resources/index.html
+++ b/resources/index.html
@@ -15,7 +15,7 @@ keywords:
             <a href="reading-lists">Reading lists</a>
            </h3>
           <p>
-            Reading lists for students looking to understand  government as a platform and associated subjects. Also available as a Bibex file importing into citation software like Zotero or Mendelay.
+            Reading lists for students looking to understand  government as a platform and associated subjects
           </p>
         </li>
         <li>
@@ -58,7 +58,7 @@ keywords:
             Government as a Platform RSS feeds
            </h3>
           <p>
-            An OMPL file of blogs that are publishing on the subject of government as a platform.
+            An OMPL file of blogs that are publishing on the subject of government as a platform
           </p>
         </li>
        <li>
