--- a/definitions/definition-of-gaap.html
+++ b/definitions/definition-of-gaap.html
@@ -9,7 +9,7 @@ keywords:
     <div class="medium-10 large-8 cell">
       <h1>A definition of Government as a Platform</h1>
       <p class="lead">
-      Reorganising the work of government around a network of shared APIs, open-standards and canonical datasets, so that civil servants, businesses and others can deliver radically better services to the public, more safely, efficiently and accountably
+      Reorganising the work of government around a network of shared APIs, open-standards and canonical datasets, so that public servants, businesses and others can deliver radically better services to the public, more safely, efficiently and accountably
       </p>
     </div>
   </section>
