--- a/mapping/index.html
+++ b/mapping/index.html
@@ -34,10 +34,10 @@ keywords:
         <li>
           <span class="label in-progress">In progress</span>
           <h3>
-            <a href="https://platformland.github.io/government-service-standards">Register of government service standards</a>
+            <a href="https://platformland.github.io/government-service-standards">Register of government digital standards</a>
            </h2>
           <p>
-            A list of design principles in use by digital service units around the world
+            A list of service, API and coding standards in use by governments around the world
           </p>
         </li>
        </ul>
